--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ epd-waveshare = { path = "../epd-waveshare" }
 
 embedded-hal = { version = "=1.0.0-rc.1" }
 embedded-hal-bus = { version = "0.1.0-rc.1"}
+static_cell = { version = "2.0.0", features = ["nightly"] }
