--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ embedded-svc = { version = "0.25.0", default-features = false, features = [] }
 embedded-io = "0.4.0"
 heapless = { version = "0.7.14", default-features = false }
 embedded-graphics = { version = "0.8.1" }
-epd-waveshare = { path = "../epd-waveshare" }
+epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git" }
 
 embedded-hal = { version = "=1.0.0-rc.1" }
 embedded-hal-bus = { version = "0.1.0-rc.1"}
