--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-hal = { package = "esp32s3-hal", version = "0.13.0", features = [
+esp-hal = { package = "esp32s3-hal", version = "0.13.0", features = [
     "rt",
     "log",
     "eh1"
@@ -15,8 +15,6 @@ esp-alloc = "0.3.0"
 esp-backtrace = { version = "0.9.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
 esp-println = { version = "0.7.0", features = ["esp32s3","log"] }
 log = { version = "0.4.18" }
-esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "7632e74", features = ["esp32s3", "wifi"] }
-smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
 embedded-svc = { version = "0.25.0", default-features = false, features = [] }
 embedded-io = "0.4.0"
 heapless = { version = "0.7.14", default-features = false }
@@ -27,5 +25,5 @@ embedded-hal = { version = "=1.0.0-rc.1" }
 embedded-hal-bus = { version = "0.1.0-rc.1"}
 static_cell = { version = "2.0.0", features = ["nightly"] }
 
-# [patch.crates-io]
-# hal = {package = "esp32s3-hal", path = "../esp-hal/esp32s3-hal"}
+[patch.crates-io]
+esp-hal = {package = "esp32s3-hal", git = "https://github.com/esp-rs/esp-hal" } # path = "../esp-hal/esp32s3-hal"}
